Minor change
Co-authored-by: David Roberts <dave.roberts@elastic.co>